# fin

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  README.zh.md  build.sh  check_alerts.py  fin.spec  launcher.py  pyproject.toml  restart.sh  run.sh  serve.py  stop.sh  verify_email.py
.github/workflows/: ci.yml  release.yml
assets/: fin.icns
config/: .env.example  app.json  symbols.json
config/i18n/: en.json  zh.json
data/: ledger_categories.json  symbols.json
data/import/: ibkr_deposit_transaction.csv  ibkr_deposit_transaction.xls  美股收益_normalized.csv
fin/: alert_email.py  api.py  categories_store.py  config.py  context.py  data_migration.py  database.py  i18n.py  ledger_categories.py  logger.py  middleware.py  settings.py
fin/enums/: __init__.py  asset_category.py
fin/models/: account.py  alert.py  balance_account.py  balance_item.py  balance_snapshot.py  benchmark_custom_scheme.py  benchmark_result.py  dividend_history.py  holding.py  income.py  ledger.py  price_history.py  stock.py  transaction.py  user.py  watchlist.py
fin/repositories/: account_sqlite.py  alert_fire_sqlite.py  alert_sqlite.py  balance_account_sqlite.py  balance_item_sqlite.py  balance_snapshot_sqlite.py  base.py  holding_sqlite.py  income_sqlite.py  ledger_sqlite.py  stock_sqlite.py  transaction_sqlite.py  watchlist_sqlite.py
fin/routers/: alerts.py  balance.py  benchmark.py  categories.py  holdings.py  ledger.py  meta.py  settings.py  watchlist.py
fin/schemas/: _validators.py  account.py  alert.py  balance_account.py  balance_item.py  balance_snapshot.py  bulk.py  category.py  holding.py  income.py  ledger.py  schema.sql  transaction.py  watchlist.py
fin/services/: alert_checker.py  alert_scheduler.py  benchmark_history_service.py  benchmark_scheduler.py  benchmark_service.py  market_state_updater.py  price_history_service.py  price_updater.py  quote.py
frontend/: i18n.html  index.html
frontend/src/: about.jsx  alerts.jsx  app.jsx  atoms.jsx  balance.jsx  charts.jsx  dashboard.jsx  data.jsx  fire.jsx  holdings.jsx  i18n.jsx  icons.jsx  ledger.jsx
hooks/: hook-pandas.py  rthook-utf8.py
installer/: fin.iss
scripts/: build.py  check_i18n.py  export_schemas.py  vendor_frontend.py
skills/: README.md  README.zh.md
skills/fin-accounts/: SKILL.md
skills/fin-import/: SKILL.md
tests/: conftest.py  test_alert_checker.py  test_alerts_api.py  test_alerts_bulk.py  test_balance_accounts_bulk.py  test_balance_api.py  test_balance_items_bulk.py  test_benchmark.py  test_categories_api.py  test_check_alerts.py  test_china_fund_provider.py  test_config_frozen.py  test_data_migration.py  test_dev_guard.py  test_dividends.py  test_export_schemas.py  test_fire_cagr.py  test_holdings_api.py  test_holdings_bulk.py  test_i18n_keys.py  test_income_bulk.py  test_launcher.py  test_ledger_api.py  test_ledger_bulk.py  test_price_updater.py  test_pure.py  test_quote_provider_base.py  test_quote_service.py  test_rebalance_api.py  test_settings_api.py  test_skill_pipeline.py  test_skills_e2e.py  test_stock_repo.py  test_transactions_bulk.py  test_transactions_paged.py  test_user_and_alert_owner.py  test_watchlist_bulk.py  test_yfinance_provider.py
(+54 files in other folders)
