[project]
name = "fin"
version = "0.1.0"
description = "Personal financial management — alerts, holdings, ledger, FIRE"
requires-python = ">=3.11"
dependencies = [
    "agentmail>=0.1.0",
    "akshare>=1.14.0",
    "exchange-calendars>=4.13.2",
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "yfinance>=0.2.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fin"]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
addopts = "--cov=fin --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["serve.py", "check_alerts.py"]
