[project]
name = "fin"
dynamic = ["version"]
description = "Personal financial management — alerts, holdings, ledger, FIRE"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "xiapuyang" }]
requires-python = ">=3.11"
dependencies = [
    "agentmail>=0.1.0",
    "akshare>=1.14.0",
    "exchange-calendars>=4.13.2",
    "fastapi[standard]>=0.115.0",
    "pillow>=12.2.0",
    "platformdirs>=4.9.6",
    "pystray>=0.19.5",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.0",
    "yfinance>=0.2.50",
]

[project.urls]
Homepage = "https://github.com/xiapuyang/fin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "fin/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["fin"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "jsonschema>=4.26.0",
    "pyinstaller>=6.20.0",
]

[tool.pytest.ini_options]
addopts = "--cov=fin --cov-report=term-missing --cov-fail-under=80 -m 'not e2e'"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "e2e: spins up a real uvicorn + temp SQLite; slow. Run with `-m e2e --no-cov`.",
]

[tool.coverage.run]
omit = ["serve.py", "check_alerts.py"]
